--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             left: 0;
             color: var(--secondary-color);
         }
-        .linktree-link {
-            background-color: #000;
+        .whatsapp-link {
+            background-color: #25D366;
             color: white;
             padding: 1rem 2rem;
             border-radius: 9999px;
@@ -56,8 +56,8 @@
             gap: 0.5rem;
             transition: background-color 0.3s ease;
         }
-        .linktree-link:hover {
-            background-color: #333;
+        .whatsapp-link:hover {
+            background-color: #128C7E;
         }
     </style>
 </head>
@@ -207,9 +207,9 @@
                             <p>Difusión Gral. Mendoza: Mar - <span class="font-bold">2612904484</span></p>
                             <p>Difusión San Juan: Valentín - <span class="font-bold">2645211394</span></p>
                         </div>
-                        <a href="https://linktr.ee/portafoliospixelcreativo" target="_blank" class="linktree-link mt-6">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-link"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"/><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"/></svg>
-                            ENCONTRANOS ACÁ
+                        <a href="https://wa.me/+542617484266" target="_blank" class="whatsapp-link mt-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-message-square-text"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/><line x1="13" x2="13" y1="8" y2="12"/><line x1="10" x2="10" y1="8" y2="12"/></svg>
+                            Contacto por WhatsApp
                         </a>
                     </div>
                 </div>
