--- a/index.html
+++ b/index.html
@@ -116,12 +116,13 @@
                             <div class="bg-gray-100 p-4 rounded-xl">
                                 <p class="text-xl font-bold accent-text">Paquete AVANZADO</p>
                                 <p class="text-lg mt-1 font-extrabold text-gray-900">ARS$ 140.000</p>
-                                <p class="text-xs text-gray-600 mt-1">Opciones de paga quincenal con 25% de publicidad paga cubierta.</p>
+                                <p class="text-xs text-gray-600 mt-1">Incluye **20 piezas visuales (Flyers)** y **4 Reels** de alta calidad al mes.</p>
+                                <p class="text-xs text-gray-600 mt-1">Opciones de pago quincenal con 25% de publicidad paga cubierta.</p>
                             </div>
                             <div class="bg-gray-100 p-4 rounded-xl">
                                 <p class="text-xl font-bold accent-text">Paquete PREMIUM</p>
                                 <p class="text-lg mt-1 font-extrabold text-gray-900">ARS$ 175.000</p>
-                                <p class="text-xs text-gray-600 mt-1">Incluye Community Manager.</p>
+                                <p class="text-xs text-gray-600 mt-1">Servicios de diseño y contenido completos, además de un Community Manager.</p>
                             </div>
                         </div>
                     </div>
@@ -193,21 +194,27 @@
                     
                     <!-- ¡Hablemos de tu Proyecto! -->
                     <div class="themed-card p-6 rounded-2xl shadow-md hover-effect text-center">
-                        <h4 class="text-xl font-bold mb-2 accent-text">
+                        <h4 class="text-xl font-bold mb-4 accent-text">
                             ¡Hablemos de tu Proyecto o emprendimiento!
                         </h4>
-                        <p class="text-lg font-semibold text-gray-800 mb-2">
-                            ¿Te gustan los desafíos y querés alcanzar esas metas?
+                        <p class="text-lg font-semibold text-gray-800 mb-4">
+                            ¿Listo para llevar tu marca al siguiente nivel?
                         </p>
-                        <p class="text-sm text-gray-600 mb-4">
-                            Somos parte del staff y estamos para ayudarte.
-                        </p>
-                        <div class="space-y-2 text-base font-semibold text-gray-900">
-                            <p>Diseño Audiovisual: Matías - <span class="font-bold">2617484266</span></p>
-                            <p>Difusión Gral. Mendoza: Mar - <span class="font-bold">2612904484</span></p>
-                            <p>Difusión San Juan: Valentín - <span class="font-bold">2645211394</span></p>
+                        <div class="space-y-2 text-base">
+                            <div class="text-gray-900">
+                                <span class="font-bold">Matías</span> (Diseño Audiovisual):
+                                <span class="block text-gray-600 text-sm mt-1">2617484266</span>
+                            </div>
+                            <div class="text-gray-900">
+                                <span class="font-bold">Mar</span> (Difusión Gral. Mendoza):
+                                <span class="block text-gray-600 text-sm mt-1">2612904484</span>
+                            </div>
+                            <div class="text-gray-900">
+                                <span class="font-bold">Valentín</span> (Difusión San Juan):
+                                <span class="block text-gray-600 text-sm mt-1">2645211394</span>
+                            </div>
                         </div>
-                        <a href="https://wa.me/+542617484266" target="_blank" class="whatsapp-link mt-6">
+                        <a href="https://wa.me/+542617484266" target="_blank" class="whatsapp-link mt-8">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-message-square-text"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/><line x1="13" x2="13" y1="8" y2="12"/><line x1="10" x2="10" y1="8" y2="12"/></svg>
                             Contacto por WhatsApp
                         </a>
