--- a/index.html
+++ b/index.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Muestra</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background-image: url('https://i.imgur.com/kK3fV2T.jpeg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-attachment: fixed;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pixel Creativo</title>
+    <!-- Ícono de la página web (favicón) -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='50%25' y='50%25' dominant-baseline='central' text-anchor='middle' font-family='Arial, sans-serif' font-size='80' fill='%236B21A8'%3E%E2%96%A0%3C/text%3E%3C/svg%3E">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
+            color: #1f2937;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="relative w-full max-w-sm mx-auto p-4 sm:p-6 md:p-8">
-    <div class="bg-white bg-opacity-80 backdrop-filter backdrop-blur-lg rounded-3xl p-6 sm:p-8 shadow-xl text-center">
-      <h1 class="text-3xl sm:text-4xl font-extrabold text-gray-900 mb-4">
-        ¡Hola!
-      </h1>
-      <p class="text-gray-700 text-lg mb-6">
-        Esta es una página de prueba con las imágenes que me proporcionaste.
-      </p>
-      <div class="flex flex-col items-center">
-        <div class="bg-gray-200 rounded-2xl w-full p-2 mb-4">
-          <img src="https://i.imgur.com/2Y45KjZ.jpeg" alt="Foto en fler" class="w-full rounded-xl shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/300x150/f3f4f6/374151?text=Imagen+No+Cargada';">
-        </div>
-        <p class="text-sm text-gray-600">
-          Esta es la imagen de la foto en el fler.
-        </p>
-      </div>
+<body class="bg-gray-100 flex flex-col min-h-screen">
+    <!-- Contenedor principal para el fondo -->
+    <div class="relative w-full h-screen bg-cover bg-center" style="background-image: url('https://drive.google.com/uc?id=1hy5tcRXB-xdQSHqHqn_gh5DdOfIikuOb');">
+        <div class="absolute inset-0 bg-black opacity-50"></div>
+        <header class="relative z-10 text-white text-center py-8">
+            <h1 class="text-4xl md:text-6xl font-bold tracking-tight">Pixel Creativo</h1>
+            <p class="mt-2 text-xl md:text-2xl font-medium text-purple-200">Narrativas visuales que hacen brillar tu marca.</p>
+        </header>
+
+        <!-- Contenedor para el flyer y el texto -->
+        <main class="relative z-10 flex flex-col md:flex-row items-center justify-center space-y-8 md:space-y-0 md:space-x-12 px-4 py-12">
+            <!-- Contenedor del flyer -->
+            <div class="bg-white rounded-xl shadow-2xl p-6 transform hover:scale-105 transition-transform duration-300 w-full max-w-sm">
+                <img src="https://drive.google.com/uc?id=165tJXPFd2bqsn8VYqBHD9SUKp9_-0WBu" alt="Flyer de Pixel Creativo" class="rounded-lg shadow-lg w-full h-auto">
+            </div>
+
+            <!-- Contenedor de texto con detalles sobre el servicio -->
+            <div class="bg-white bg-opacity-90 rounded-xl shadow-2xl p-8 max-w-2xl text-center md:text-left">
+                <h2 class="text-3xl font-bold text-gray-900 mb-4">¡Tu Impulso Digital!</h2>
+                <p class="text-lg text-gray-700 leading-relaxed">
+                    En Pixel Creativo, queremos que tu marca brille sin enredos ni jerga complicada. Si buscas una presencia constante y atractiva en redes sociales sin preocuparte por la gestión diaria, nuestros planes de diseño y contenido son ideales para ti.
+                </p>
+                <div class="mt-6">
+                    <a href="#" class="inline-block bg-purple-600 text-white font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-purple-700 transition-colors duration-300">
+                        Saber más
+                    </a>
+                </div>
+            </div>
+        </main>
     </div>
-  </div>
+
+    <!-- Sección de contacto y pie de página -->
+    <footer class="bg-gray-800 text-gray-300 py-6 mt-auto">
+        <div class="container mx-auto text-center px-4">
+            <p>&copy; 2025 Pixel Creativo. Todos los derechos reservados.</p>
+            <p class="mt-2 text-sm">
+                Diseñado para emprender y crecer juntos.
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
